<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/provider_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hotspot_status_waiting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_start_hotspot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_hotspot"
        app:layout_constraintTop_toBottomOf="@id/provider_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_open_hotspot_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_hotspot_settings"
        app:layout_constraintTop_toBottomOf="@id/btn_start_hotspot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/provider_ssid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ssid_label"
        app:layout_constraintTop_toBottomOf="@id/btn_open_hotspot_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/provider_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        app:layout_constraintTop_toBottomOf="@id/provider_ssid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
